<resources>
    <string name="app_name">EmployeesO7</string>
    <string name="home">Home</string>
    <string name="employee_form">Employee form</string>
    <string name="statistics">Statistics</string>

    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="birthdate">Birthdate</string>
    <string name="gender">Gender</string>
    <string name="monthly_salary">Monthly Salary(€)</string>
    <string name="add_employee">Add employee</string>
    <string name="empty_field">Field must not be empty</string>
    <string name="euro_sign">€</string>
    <string name="api_key">AIzaSyBOUiEDk4pR3KccKyDsQ7Ql2YvIcmuPb0I</string>
    <string name="search_engine_key">016165087535043040058:yibjhcio00u</string>
    <string name="no_data">No data</string>
    <string name="no_results">No search results</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>
