<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/iv_logo"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/outfit7_logo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/et_firstName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="16dp"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName"
                    android:background="@drawable/rounded_edittext"
                    android:elevation="5dp"
                    android:padding="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

                <EditText
                    android:id="@+id/et_lastname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="16dp"
                    android:hint="@string/last_name"
                    android:inputType="textPersonName"
                    android:background="@drawable/rounded_edittext"
                    android:elevation="5dp"
                    android:padding="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_firstName" />

                <Spinner
                    android:id="@+id/spinner_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:background="@drawable/rounded_edittext"
                    android:layout_marginTop="16dp"
                    android:textAlignment="center"
                    android:entries="@array/gender"
                    android:elevation="5dp"
                    app:layout_constraintStart_toStartOf="@+id/et_lastname"
                    app:layout_constraintTop_toBottomOf="@+id/et_lastname" />

                <EditText
                    android:id="@+id/et_birthday"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="16dp"
                    android:hint="@string/birthdate"
                    android:focusable="false"
                    android:inputType="date"
                    android:background="@drawable/rounded_edittext"
                    android:elevation="5dp"
                    android:padding="10dp"
                    app:layout_constraintStart_toStartOf="@+id/spinner_gender"
                    app:layout_constraintTop_toBottomOf="@+id/spinner_gender" />

                <ImageView
                    android:id="@+id/iv_calendar"
                    android:layout_width="50dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/rounded_calendar_btn"
                    android:src="@mipmap/calendat_alt"
                    android:padding="10dp"
                    app:layout_constraintBottom_toBottomOf="@+id/et_birthday"
                    app:layout_constraintStart_toEndOf="@+id/et_birthday"
                    app:layout_constraintTop_toTopOf="@+id/et_birthday" />

                <EditText
                    android:id="@+id/et_salary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="16dp"
                    android:hint="@string/monthly_salary"
                    android:inputType="numberDecimal"
                    android:background="@drawable/rounded_edittext"
                    android:elevation="5dp"
                    android:padding="10dp"
                    app:layout_constraintEnd_toEndOf="@id/iv_calendar"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_birthday" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:background="@drawable/rounded_btn"
                    android:text="@string/add_employee"
                    android:textAllCaps="false"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@id/et_salary"
                    app:layout_constraintStart_toStartOf="@id/et_salary"
                    app:layout_constraintEnd_toEndOf="@id/et_lastname"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>